# LangChain-Powershell-Agent

./: .env  PowershellAgent.py  README.md  README_PowerShellAgent.md  pyproject.toml  requirements.txt
