[project]
name = "lanchain-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.8.3",
    "chroma>=0.2.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "langchain>=1.0.0",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=2.0.0",
    "langchain-google-vertexai>=2.0.28",
    "langchain-openai>=0.3.33",
    "langgraph>=1.0.0",
    "langsmith>=0.4.26",
    "pymupdf>=1.26.4",
    "python-certifi-win32>=1.6.1",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]
